Updated for new class name after refactoring.

--- a/BrainNet/FFBrainNet Tests.ipynb
+++ b/BrainNet/FFBrainNet Tests.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "# Repository imports\n",
     "from FFBrainNet import FFBrainNet\n",
-    "from FFLocalNet import FFLocalNet\n",
+    "from FFLocalTableForm1 import FFLocalTableForm1\n",
     "from LocalNetBase import Options, UpdateScheme\n",
     "from DataGenerator import random_halfspace_data\n",
     "from train import *"
@@ -253,7 +253,7 @@
    ],
    "source": [
     "# Instantiate an FFLocalNet with 1 hidden layer, width 10\n",
-    "brain = FFLocalNet(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)\n",
+    "brain = FFLocalTableForm1(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)\n",
     "\n",
     "# Print initial output rule\n",
     "print('brain output_fule:')\n",
@@ -1246,7 +1246,7 @@
    "outputs": [],
    "source": [
     "# Create a new network with the same params as before\n",
-    "brain2 = FFLocalNet(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)"
+    "brain2 = FFLocalTableForm1(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)"
    ]
   },
   {
@@ -1864,7 +1864,7 @@
    ],
    "source": [
     "# Instantiate an FFLocalNet with 2 hidden layers, width 20\n",
-    "brain = FFLocalNet(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)\n",
+    "brain = FFLocalTableForm1(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)\n",
     "\n",
     "# Print initial rule\n",
     "print('brain hidden_layer_rule:')\n",
@@ -2900,7 +2900,7 @@
    "outputs": [],
    "source": [
     "# Create a new network with the same params as before\n",
-    "brain2 = FFLocalNet(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)"
+    "brain2 = FFLocalTableForm1(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)"
    ]
   },
   {
@@ -5088,7 +5088,7 @@
     "# Learn an output layer plasticity rule\n",
     "opts = Options(use_output_rule=True, gd_output_rule=True, gd_input=True)\n",
     "scheme = UpdateScheme(update_misclassified=False, update_all_edges=True)\n",
-    "local_brain = FFLocalNet(n=784, m=10, l=1, w=1000, p=0.1, cap=100, options=opts, update_scheme=scheme)\n",
+    "local_brain = FFLocalTableForm1(n=784, m=10, l=1, w=1000, p=0.1, cap=100, options=opts, update_scheme=scheme)\n",
     "\n",
     "losses, meta_train_acc, meta_test_acc, meta_stats = train_local_rule(\n",
     "    X_train,\n",
