Updates required by the moving of the table-based plasticity rule classes into a sub-directory.

--- a/BrainNet/FFBrainNet Tests.ipynb
+++ b/BrainNet/FFBrainNet Tests.ipynb
@@ -14,10 +14,26 @@
     "\n",
     "# Repository imports\n",
     "from FFBrainNet import FFBrainNet\n",
-    "from FFLocalTableForm1 import FFLocalTableForm1\n",
     "from LocalNetBase import Options, UpdateScheme\n",
     "from DataGenerator import random_halfspace_data\n",
     "from train import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decide which form of plasticity rule to analyze:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FFLocalTableRules.FFLocalTableForm1 import FFLocalTableForm1\n",
+    "PlasRuleClass = FFLocalTableForm1"
    ]
   },
   {
@@ -253,11 +269,11 @@
    ],
    "source": [
     "# Instantiate an FFLocalNet with 1 hidden layer, width 10\n",
-    "brain = FFLocalTableForm1(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)\n",
+    "brain = PlasRuleClass(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)\n",
     "\n",
     "# Print initial output rule\n",
     "print('brain output_fule:')\n",
-    "print(brain.get_output_rule())  # 2 x 2 x (cap+1), zero initialized"
+    "print(brain.get_output_rule())  # zero initialized"
    ]
   },
   {
@@ -1246,7 +1262,7 @@
    "outputs": [],
    "source": [
     "# Create a new network with the same params as before\n",
-    "brain2 = FFLocalTableForm1(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)"
+    "brain2 = PlasRuleClass(n=4, m=2, l=1, w=10, p=0.5, cap=5, options=opts, update_scheme=scheme)"
    ]
   },
   {
@@ -1864,11 +1880,11 @@
    ],
    "source": [
     "# Instantiate an FFLocalNet with 2 hidden layers, width 20\n",
-    "brain = FFLocalTableForm1(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)\n",
+    "brain = PlasRuleClass(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)\n",
     "\n",
     "# Print initial rule\n",
     "print('brain hidden_layer_rule:')\n",
-    "print(brain.get_hidden_layer_rule())  # 2 x 2 x (cap+1), randomly initialized"
+    "print(brain.get_hidden_layer_rule())  # randomly initialized"
    ]
   },
   {
@@ -2900,7 +2916,7 @@
    "outputs": [],
    "source": [
     "# Create a new network with the same params as before\n",
-    "brain2 = FFLocalTableForm1(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)"
+    "brain2 = PlasRuleClass(n=4, m=2, l=2, w=20, p=0.5, cap=10, options=opts, update_scheme=scheme)"
    ]
   },
   {
@@ -5088,7 +5104,7 @@
     "# Learn an output layer plasticity rule\n",
     "opts = Options(use_output_rule=True, gd_output_rule=True, gd_input=True)\n",
     "scheme = UpdateScheme(update_misclassified=False, update_all_edges=True)\n",
-    "local_brain = FFLocalTableForm1(n=784, m=10, l=1, w=1000, p=0.1, cap=100, options=opts, update_scheme=scheme)\n",
+    "local_brain = PlasRuleClass(n=784, m=10, l=1, w=1000, p=0.1, cap=100, options=opts, update_scheme=scheme)\n",
     "\n",
     "losses, meta_train_acc, meta_test_acc, meta_stats = train_local_rule(\n",
     "    X_train,\n",
