--- a/BrainNet/notebooks/Adversarial_epsilon_ball.ipynb
+++ b/BrainNet/notebooks/Adversarial_epsilon_ball.ipynb
@@ -105,7 +105,7 @@
     "scheme = UpdateScheme(\n",
     "            cross_entropy_loss = True, \n",
     "            mse_loss = False, \n",
-    "            update_misclassified = True,\n",
+    "            update_misclassified_only = True,\n",
     "            update_all_edges = False\n",
     "        )"
    ]
@@ -9096,7 +9096,7 @@
     "\n",
     "meta_model1.graph_weights = torch.zeros_like(meta_model1.graph_weights)\n",
     "meta_model1.output_weights = torch.zeros_like(meta_model1.output_weights)\n",
-    "# meta_model1.update_scheme.update_misclassified = False\n",
+    "# meta_model1.update_scheme.update_misclassified_only = False\n",
     "meta_model1.step_sz = 1e-5\n",
     "with torch.no_grad():\n",
     "    for i in range(15):\n",
