--- a/BrainNet/notebooks/mnist_adersarial.ipynb
+++ b/BrainNet/notebooks/mnist_adersarial.ipynb
@@ -159,7 +159,7 @@
     "scheme = UpdateScheme(\n",
     "            cross_entropy_loss = True, \n",
     "            mse_loss = False, \n",
-    "            update_misclassified = True,\n",
+    "            update_misclassified_only = True,\n",
     "            update_all_edges = False\n",
     "        )"
    ]
