Updated for the recent refactoring of the FFLocalNet class hierarchy.

--- a/BrainNet/notebooks/FFBrainNet_Tests.ipynb
+++ b/BrainNet/notebooks/FFBrainNet_Tests.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from FFLocalTableRules.FFLocalTable_PrePostCount import FFLocalTable_PrePostCount\n",
+    "from FFLocalLegacyClasses import *\n",
     "PlasRuleClass = FFLocalTable_PrePostCount"
    ]
   },
@@ -101,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot downstream training curves.\n",
@@ -239,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: The output weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -302,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: The output weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -373,7 +371,7 @@
    "outputs": [],
    "source": [
     "# Replace the output layer plasticity rule with the rule we learned from the original data\n",
-    "brain2.output_rule = nn.Parameter(brain.output_rule.clone().detach())"
+    "brain2.set_output_rule(brain.get_output_rule())"
    ]
   },
   {
@@ -385,7 +383,7 @@
    "outputs": [],
    "source": [
     "# Try learning again with the original output layer plasticity rule, but with input weights GD-learned for this data\n",
-    "# NOTE: The output weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain2, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -556,7 +554,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -619,7 +617,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -690,7 +688,7 @@
    "outputs": [],
    "source": [
     "# Replace the hidden layer plasticity rule with the rule we learned from the original data\n",
-    "brain2.hidden_layer_rule = nn.Parameter(brain.hidden_layer_rule.clone().detach())"
+    "brain2.set_hidden_layer_rule(brain.get_hidden_layer_rule())"
    ]
   },
   {
@@ -702,7 +700,7 @@
    "outputs": [],
    "source": [
     "# Try learning again with the original hidden layer plasticity rule, but with input & output weights GD-learned for this data\n",
-    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain2, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
@@ -881,7 +879,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: The output weights will be automatically reset during the first sample within train_given_rule()\n",
+    "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X_train, y_train, local_brain, num_epochs=2, batch_size=200, vanilla=False, learn_rate=1e-3,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=3000)"
