Importing legacy classes for backward compatibility following the refactoring of the FFLocalNet class hierarchy.

--- a/BrainNet/notebooks/FF_simple_comparison_interpretations.ipynb
+++ b/BrainNet/notebooks/FF_simple_comparison_interpretations.ipynb
@@ -342,10 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from FFLocalTableRules.FFLocalTable_PrePost import FFLocalTable_PrePost\n",
-    "from FFLocalTableRules.FFLocalTable_PrePostCount import FFLocalTable_PrePostCount\n",
-    "from FFLocalTableRules.FFLocalTable_PrePostPercent import FFLocalTable_PrePostPercent\n",
-    "from FFLocalTableRules.FFLocalTable_PostCount import FFLocalTable_PostCount"
+    "from FFLocalLegacyClasses import *"
    ]
   },
   {
