Added disable_backprop=True to train_downstream() where necessary for backward compatibility.

--- a/BrainNet/notebooks/FFBrainNet_Tests.ipynb
+++ b/BrainNet/notebooks/FFBrainNet_Tests.ipynb
@@ -1460,7 +1460,7 @@
     "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -1584,7 +1584,7 @@
     "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -2209,7 +2209,7 @@
     "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain2, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -2523,7 +2523,7 @@
     "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -2647,7 +2647,7 @@
     "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -2815,7 +2815,7 @@
     "# NOTE: The hidden layer weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X, y, brain2, num_epochs=1, batch_size=1, vanilla=False, learn_rate=1e-2,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500, disable_backprop=True)"
    ]
   },
   {
@@ -24812,7 +24812,7 @@
     "# NOTE: The output weights will be automatically reset during the first sample within train_downstream()\n",
     "(plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = train_downstream(\n",
     "    X_train, y_train, local_brain, num_epochs=2, batch_size=200, vanilla=False, learn_rate=1e-3,\n",
-    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=3000)"
+    "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=3000, disable_backprop=True)"
    ]
   },
   {
