Added an assert to TablePlasticityRule to ensure that we never attempt to set a rule that is supposed to be learnable according to our network's Options. Rules that are set are always PyTorch Tensors, never Parameters.

--- a/BrainNet/notebooks/FFBrainNet_Tests.ipynb
+++ b/BrainNet/notebooks/FFBrainNet_Tests.ipynb
@@ -2153,6 +2153,7 @@
    "outputs": [],
    "source": [
     "# Replace the output layer plasticity rule with the rule we learned from the original data\n",
+    "brain2.options.gd_output_rule=False\n",
     "brain2.set_output_rule(brain.get_output_rule())"
    ]
   },
@@ -2759,6 +2760,7 @@
    "outputs": [],
    "source": [
     "# Replace the hidden layer plasticity rule with the rule we learned from the original data\n",
+    "brain2.options.gd_graph_rule=False\n",
     "brain2.set_hidden_layer_rule(brain.get_hidden_layer_rule())"
    ]
   },
