moved some figures to a backup folder

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quick_get_data(which, dim, N=2000, split=0.75, relu_k=16):\n",
+    "def quick_get_data(which, dim, N=2000, split=0.75, relu_k=8):\n",
     "    which = which.lower()\n",
     "    \n",
     "    if which == 'halfspace':\n",
@@ -97,6 +97,7 @@
     "    multi_stats_down = []\n",
     "    \n",
     "    for run in range(num_runs):\n",
+    "        print()\n",
     "        print(f'Run {run+1} / {num_runs}...')\n",
     "        brain_up = brain_up_fact()\n",
     "        brain_down = brain_down_fact()\n",
@@ -125,12 +126,14 @@
     "        print('Training...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=100, vanilla=False, learn_rate=1e-2,\n",
+    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)\n",
     "        \n",
     "        # Save this run.\n",
     "        multi_stats_up.append(stats_up)\n",
     "        multi_stats_down.append(stats_down)\n",
+    "        \n",
+    "        print()\n",
     "    \n",
     "    return (multi_stats_up, multi_stats_down)"
    ]
