updated experiments notebooks (comparing)

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -90,9 +90,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def evaluate_brain(brain_fact, n, dataset='halfspace',\n",
+    "                   num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
+    "                   num_epochs_downstream=1):\n",
+    "    '''\n",
+    "    Evaluate a single network instance by meta-learning and then\n",
+    "    training on a reinitialized dataset of the same dimensionality.\n",
+    "    IMPORTANT NOTE: Backprop is disabled downstream, since we assume\n",
+    "    layers with direct gradient descent to be trained upstream already.\n",
+    "    '''\n",
+    "    multi_stats_up = []\n",
+    "    multi_stats_down = []\n",
+    "    \n",
+    "    for run in range(num_runs):\n",
+    "        print()\n",
+    "        print(f'Run {run+1} / {num_runs}...')\n",
+    "        brain = brain_fact()\n",
+    "    \n",
+    "        # Upstream.\n",
+    "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n)\n",
+    "        print('Meta-learning...')\n",
+    "        stats_up = metalearn_rules(\n",
+    "            X_train, y_train, brain, num_rule_epochs=num_rule_epochs,\n",
+    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
+    "            X_test=X_test, y_test=y_test, verbose=False)\n",
+    "        \n",
+    "        # Downstream.\n",
+    "        # No rule transfer needed since we reuse the same network,\n",
+    "        # but just on an altered dataset.\n",
+    "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n)\n",
+    "        print('Training SAME brain instance (NO backprop)...')\n",
+    "        stats_down = train_downstream(\n",
+    "            X_train, y_train, brain, num_epochs=num_epochs_downstream,\n",
+    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
+    "            X_test=X_test, y_test=y_test, verbose=False,\n",
+    "            stats_interval=500, disable_backprop=True)\n",
+    "        \n",
+    "        # Save this run.\n",
+    "        multi_stats_up.append(stats_up)\n",
+    "        multi_stats_down.append(stats_down)\n",
+    "        \n",
+    "        print()\n",
+    "    \n",
+    "    return (multi_stats_up, multi_stats_down)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down, dataset='halfspace',\n",
     "                     num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
-    "                     num_epochs_downstream=2):\n",
+    "                     num_epochs_downstream=1):\n",
+    "    '''\n",
+    "    Evaluate the quality of meta-learning and rule interpretations by\n",
+    "    training a different network instance with transferred rules.\n",
+    "    '''\n",
     "    multi_stats_up = []\n",
     "    multi_stats_down = []\n",
     "    \n",
@@ -123,7 +179,65 @@
     "        # Downstream.\n",
     "        if n_down is not None:\n",
     "            X_train, y_train, X_test, y_test = quick_get_data(dataset, n_down)\n",
-    "        print('Training...')\n",
+    "        print('Training NEW brain instance (WITH backprop)...')\n",
+    "        stats_down = train_downstream(\n",
+    "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
+    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
+    "            X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)\n",
+    "        \n",
+    "        # Save this run.\n",
+    "        multi_stats_up.append(stats_up)\n",
+    "        multi_stats_down.append(stats_down)\n",
+    "        \n",
+    "        print()\n",
+    "    \n",
+    "    return (multi_stats_up, multi_stats_down)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_generalization(brain_up_fact, brain_down_fact, n_up, n_down,\n",
+    "                            dataset_up='halfspace', dataset_down='mnist',\n",
+    "                            num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
+    "                            num_epochs_downstream=1):\n",
+    "    '''\n",
+    "    Evaluate the quality of meta-learning and rule interpretations by\n",
+    "    training a different network instance with transferred rules.\n",
+    "    '''\n",
+    "    multi_stats_up = []\n",
+    "    multi_stats_down = []\n",
+    "    \n",
+    "    for run in range(num_runs):\n",
+    "        print()\n",
+    "        print(f'Run {run+1} / {num_runs}...')\n",
+    "        brain_up = brain_up_fact()\n",
+    "        brain_down = brain_down_fact()\n",
+    "    \n",
+    "        # Upstream.\n",
+    "        X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n_up)\n",
+    "        print('Meta-learning on ' + dataset_up + '...')\n",
+    "        stats_up = metalearn_rules(\n",
+    "            X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
+    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
+    "            X_test=X_test, y_test=y_test, verbose=False)\n",
+    "\n",
+    "        # Transfer rules.\n",
+    "        try:\n",
+    "            # FF-ANN.\n",
+    "            brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
+    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "        except:\n",
+    "            # RNN.\n",
+    "            brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
+    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "\n",
+    "        # Downstream.\n",
+    "        X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n_down)\n",
+    "        print('Training NEW brain instance (WITH backprop) on ' + dataset_down + '...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
     "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
@@ -204,6 +318,7 @@
     "                           meta_test_acc + meta_test_acc_std, alpha=0.3, facecolor=default_colors[0])\n",
     "    ax[0].set_xlabel('Cumulative number of training samples')\n",
     "    ax[0].set_ylabel('Accuracy / Loss')\n",
+    "    ax[0].set_xlim(0, meta_sample_counts[-1])\n",
     "    ax[0].set_title(title_up)\n",
     "    ax[0].legend()\n",
     "    \n",
@@ -220,6 +335,7 @@
     "                           plas_test_acc + plas_test_acc_std, alpha=0.3, facecolor=default_colors[0])\n",
     "    ax[1].set_xlabel('Cumulative number of training samples')\n",
     "    ax[1].set_ylabel('Accuracy / Loss')\n",
+    "    ax[1].set_xlim(0, plas_sample_counts[-1])\n",
     "    ax[1].set_title(title_down)\n",
     "    ax[1].legend()\n",
     "    \n",
