--- a/BrainNet/notebooks/FF_experiments_generalization.ipynb
+++ b/BrainNet/notebooks/FF_experiments_generalization.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Network dimensionality and universality of rules\n",
+    "\n",
+    "## For every model, meta-learn on 8-dimensional halfspace dataset, then transfer rules, and train / test that on MNIST.\n",
+    "\n",
+    "Created by Basile Van Hoorick, Fall 2020."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
