--- a/BrainNet/notebooks/FF_experiments_universality.ipynb
+++ b/BrainNet/notebooks/FF_experiments_universality.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Network dimensionality and universality of rules\n",
+    "\n",
+    "## For every considered model, vary (1) number and (2) width of layers. Otherwise same as 'comparing'.\n",
+    "\n",
+    "Created by Basile Van Hoorick, Fall 2020."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
