my experiment notebooks WIP

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -71,6 +71,8 @@
     "        y_train = np.array([pair[1] for pair in mnist_train])\n",
     "        X_test = np.array([np.array(pair[0]) for pair in mnist_test]) / 255.0\n",
     "        y_test = np.array([pair[1] for pair in mnist_test])\n",
+    "        X_train = X_train.reshape(X_train.shape[0], -1)\n",
+    "        X_test = X_test.reshape(X_test.shape[0], -1)\n",
     "    \n",
     "    else:\n",
     "        raise ValueError('Unknown or unused dataset: ' + which)\n",
@@ -206,7 +208,7 @@
     "                            num_epochs_downstream=1):\n",
     "    '''\n",
     "    Evaluate the quality of meta-learning and rule interpretations by\n",
-    "    training a different network instance with transferred rules.\n",
+    "    training a different network on a more complex dataset with transferred rules.\n",
     "    '''\n",
     "    multi_stats_up = []\n",
     "    multi_stats_down = []\n",
@@ -288,17 +290,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_curves(agg_stats_up, agg_stats_down, title_up, title_down, save_name='figs/default'):\n",
-    "    if len(agg_stats_up) == 5:\n",
+    "def plot_curves(agg_stats_up, agg_stats_down, title_up, title_down, save_name='figs/default', no_downstream_loss=False):\n",
+    "    if len(agg_stats_down) == 5:\n",
     "        # One run.\n",
-    "        (meta_losses, meta_train_acc, meta_test_acc, meta_sample_counts, meta_stats) = agg_stats_up\n",
+    "        if agg_stats_up is not None:\n",
+    "            (meta_losses, meta_train_acc, meta_test_acc, meta_sample_counts, meta_stats) = agg_stats_up\n",
     "        (plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = agg_stats_down\n",
     "        plot_std = False\n",
     "    \n",
     "    else:\n",
     "        # Multiple runs.\n",
-    "        (meta_losses, meta_losses_std, meta_train_acc, meta_train_acc_std,\n",
-    "         meta_test_acc, meta_test_acc_std, meta_sample_counts, meta_stats) = agg_stats_up\n",
+    "        if agg_stats_up is not None:\n",
+    "            (meta_losses, meta_losses_std, meta_train_acc, meta_train_acc_std,\n",
+    "             meta_test_acc, meta_test_acc_std, meta_sample_counts, meta_stats) = agg_stats_up\n",
     "        (plas_losses, plas_losses_std, plas_train_acc, plas_train_acc_std,\n",
     "         plas_test_acc, plas_test_acc_std, plas_sample_counts, plas_stats) = agg_stats_down\n",
     "        plot_std = True\n",
@@ -306,29 +310,32 @@
     "    fig, ax = plt.subplots(1, 2, figsize=(10, 4))\n",
     "    \n",
     "    # Left plot = upstream.\n",
-    "    ax[0].plot(meta_sample_counts, meta_losses, label='loss', color=default_colors[2])\n",
-    "    ax[0].plot(meta_sample_counts, meta_train_acc, label='train', color=default_colors[1])\n",
-    "    ax[0].plot(meta_sample_counts, meta_test_acc, label='test', color=default_colors[0])\n",
-    "    if plot_std:\n",
-    "        ax[0].fill_between(meta_sample_counts, meta_losses - meta_losses_std,\n",
-    "                           meta_losses + meta_losses_std, alpha=0.3, facecolor=default_colors[2])\n",
-    "        ax[0].fill_between(meta_sample_counts, meta_train_acc - meta_train_acc_std,\n",
-    "                           meta_train_acc + meta_train_acc_std, alpha=0.3, facecolor=default_colors[1])\n",
-    "        ax[0].fill_between(meta_sample_counts, meta_test_acc - meta_test_acc_std,\n",
-    "                           meta_test_acc + meta_test_acc_std, alpha=0.3, facecolor=default_colors[0])\n",
-    "    ax[0].set_xlabel('Cumulative number of training samples')\n",
-    "    ax[0].set_ylabel('Accuracy / Loss')\n",
-    "    ax[0].set_xlim(0, meta_sample_counts[-1])\n",
-    "    ax[0].set_title(title_up)\n",
-    "    ax[0].legend()\n",
+    "    if agg_stats_up is not None:\n",
+    "        ax[0].plot(meta_sample_counts, meta_losses, label='loss', color=default_colors[2])\n",
+    "        ax[0].plot(meta_sample_counts, meta_train_acc, label='train', color=default_colors[1])\n",
+    "        ax[0].plot(meta_sample_counts, meta_test_acc, label='test', color=default_colors[0])\n",
+    "        if plot_std:\n",
+    "            ax[0].fill_between(meta_sample_counts, meta_losses - meta_losses_std,\n",
+    "                               meta_losses + meta_losses_std, alpha=0.3, facecolor=default_colors[2])\n",
+    "            ax[0].fill_between(meta_sample_counts, meta_train_acc - meta_train_acc_std,\n",
+    "                               meta_train_acc + meta_train_acc_std, alpha=0.3, facecolor=default_colors[1])\n",
+    "            ax[0].fill_between(meta_sample_counts, meta_test_acc - meta_test_acc_std,\n",
+    "                               meta_test_acc + meta_test_acc_std, alpha=0.3, facecolor=default_colors[0])\n",
+    "        ax[0].set_xlabel('Cumulative number of training samples')\n",
+    "        ax[0].set_ylabel('Accuracy / Loss')\n",
+    "        ax[0].set_xlim(0, meta_sample_counts[-1])\n",
+    "        ax[0].set_title(title_up)\n",
+    "        ax[0].legend()\n",
     "    \n",
     "    # Right plot = downstream.\n",
-    "    ax[1].plot(plas_sample_counts[1:], plas_losses[1:], label='loss', color=default_colors[2])\n",
+    "    if not no_downstream_loss:\n",
+    "        ax[1].plot(plas_sample_counts[1:], plas_losses[1:], label='loss', color=default_colors[2])\n",
     "    ax[1].plot(plas_sample_counts, plas_train_acc, label='train', color=default_colors[1])\n",
     "    ax[1].plot(plas_sample_counts, plas_test_acc, label='test', color=default_colors[0])\n",
     "    if plot_std:\n",
-    "        ax[1].fill_between(plas_sample_counts[1:], plas_losses[1:] - plas_losses_std[1:],\n",
-    "                           plas_losses[1:] + plas_losses_std[1:], alpha=0.3, facecolor=default_colors[2])\n",
+    "        if not no_downstream_loss:\n",
+    "            ax[1].fill_between(plas_sample_counts[1:], plas_losses[1:] - plas_losses_std[1:],\n",
+    "                               plas_losses[1:] + plas_losses_std[1:], alpha=0.3, facecolor=default_colors[2])\n",
     "        ax[1].fill_between(plas_sample_counts, plas_train_acc - plas_train_acc_std,\n",
     "                           plas_train_acc + plas_train_acc_std, alpha=0.3, facecolor=default_colors[1])\n",
     "        ax[1].fill_between(plas_sample_counts, plas_test_acc - plas_test_acc_std,\n",
@@ -347,9 +354,10 @@
     "    \n",
     "    # Print essential stats.\n",
     "    print('Mean essential stats across all runs:')\n",
-    "    print(f'Last upstream loss: {meta_losses[-1]:.4f}')\n",
-    "    print(f'Last upstream train accuracy: {meta_train_acc[-1]:.4f}')\n",
-    "    print(f'Last upstream test accuracy: {meta_test_acc[-1]:.4f}')\n",
+    "    if agg_stats_up is not None:\n",
+    "        print(f'Last upstream loss: {meta_losses[-1]:.4f}')\n",
+    "        print(f'Last upstream train accuracy: {meta_train_acc[-1]:.4f}')\n",
+    "        print(f'Last upstream test accuracy: {meta_test_acc[-1]:.4f}')\n",
     "    print(f'Last downstream loss: {plas_losses[-1]:.4f}')\n",
     "    print(f'Last downstream train accuracy: {plas_train_acc[-1]:.4f}')\n",
     "    print(f'Last downstream test accuracy: {plas_test_acc[-1]:.4f}')\n",
@@ -434,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
