--- a/BrainNet/notebooks/FF_experiments_generalization.ipynb
+++ b/BrainNet/notebooks/FF_experiments_generalization.ipynb
@@ -127,7 +127,191 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 24%|██▍       | 12/50 [00:41<02:11,  3.46s/it]"
+      "100%|██████████| 50/50 [02:53<00:00,  3.47s/it]\n",
+      "../LocalNetBase.py:77: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.rnn_rule = torch.tensor(rule).flatten().double()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3888\n",
+      "Last train accuracy: 0.9393\n",
+      "Last test accuracy: 0.9220\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0902\n",
+      "INITIAL test accuracy: 0.0892\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [10:12<00:00, 97.93it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3412\n",
+      "Last train accuracy: 0.1124\n",
+      "Last test accuracy: 0.1135\n",
+      "\n",
+      "\n",
+      "Run 2 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:54<00:00,  3.49s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3707\n",
+      "Last train accuracy: 0.9480\n",
+      "Last test accuracy: 0.9560\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0908\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0895\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [09:57<00:00, 100.45it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3412\n",
+      "Last train accuracy: 0.1124\n",
+      "Last test accuracy: 0.1135\n",
+      "\n",
+      "\n",
+      "Run 3 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:55<00:00,  3.51s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3732\n",
+      "Last train accuracy: 0.9460\n",
+      "Last test accuracy: 0.9420\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0894\n",
+      "INITIAL test accuracy: 0.0888\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [10:51<00:00, 92.05it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3552\n",
+      "Last train accuracy: 0.1124\n",
+      "Last test accuracy: 0.1135\n",
+      "\n",
+      "\n",
+      "Run 4 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:41<00:00,  4.42s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3477\n",
+      "Last train accuracy: 0.9713\n",
+      "Last test accuracy: 0.9460\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0900\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0887\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 57387/60000 [14:10<00:40, 64.45it/s]  "
      ]
     }
    ],
